--- a/dailyfresh/templates/base.html
+++ b/dailyfresh/templates/base.html
@@ -4,7 +4,7 @@
 		<div class="header">
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
-                {% if request.session.user_name != '' %}
+                {% if 'user_name' in request.session %}
 				<div class="login_btn fl">
 					欢迎您：<em>{{ request.session.user_name }}</em>
                     <span>|</span>
@@ -30,7 +30,7 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
+		<a href="df_goods/index.html" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="search_con fl">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
 			<input type="button" class="input_btn fr" name="" value="搜索">
@@ -40,7 +40,8 @@
 			<div class="goods_count fl" id="show_count">1</div>
 		</div>
 	</div>
-
-{% block content %}{% endblock content %}
+<div id="content_container">
+        {% block content %}{% endblock content %}
+    </div>
 
 {% endblock body %}
