edit by tien goods info

--- a/dailyfresh/templates/df_goods/detail_show.html
+++ b/dailyfresh/templates/df_goods/detail_show.html
@@ -125,6 +125,6 @@
 			$(this).val($(this).val().replace(/\D|^0/g,''));
 		}).bind("paste",function(){ //CTR+V事件处理
 			$(this).val($(this).val().replace(/\D|^0/g,''));
-		}).css("ime-mode", "disabled"); //CSS设置输入法不可用
-	</script>
+		}).css("ime-mode", "disabled");
+		</script>
 {%endblock detail2%}
