--- a/dailyfresh/templates/df_goods/goods_common.html
+++ b/dailyfresh/templates/df_goods/goods_common.html
@@ -25,13 +25,13 @@
 				<span></span>
 				<ul class="subnav">
                     {% for t in type_list %}
-                    <li><a href="#" class="{{ t.css_class }}" >{{ t.title }}</a></li>
+                    <li><a href="/cart/list" class="{{ t.css_class }}" >{{ t.title }}</a></li>
                     <input type="hidden" value="{{ t.id }},{{t.title}}">
                     {% endfor %}
     				</ul>
 			</div>
 			<ul class="navlist fl">
-				<li><a href="">首页</a></li>
+				<li><a href="/">首页</a></li>
 				<li class="interval">|</li>
 				<li><a href="">手机生鲜</a></li>
 				<li class="interval">|</li>
@@ -50,7 +50,6 @@
 {%block detail%}{%endblock detail%}
 
 	<div class="main_wrap clearfix">
-
         <div class="l_wrap fl clearfix">
 			<div class="new_goods">
 				<h3>新品推荐</h3>
